Apache Airflow Projects/Employee Dataset/logs/dag_id=employee_dataset-v01/run_id=scheduled__2023-12-01T00:00:00+00:00/task_id=create_copy_of_postgres_table/attempt=1.log
[2023-12-20T17:34:26.289+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: employee_dataset-v01.create_copy_of_postgres_table scheduled__2023-12-01T00:00:00+00:00 [queued]>
[2023-12-20T17:34:26.293+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: employee_dataset-v01.create_copy_of_postgres_table scheduled__2023-12-01T00:00:00+00:00 [queued]>
[2023-12-20T17:34:26.293+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2023-12-20T17:34:26.298+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_copy_of_postgres_table> on 2023-12-01 00:00:00+00:00
[2023-12-20T17:34:26.301+0000] {standard_task_runner.py:57} INFO - Started process 331 to run task
[2023-12-20T17:34:26.303+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'employee_dataset-v01', 'create_copy_of_postgres_table', 'scheduled__2023-12-01T00:00:00+00:00', '--job-id', '3', '--raw', '--subdir', 'DAGS_FOLDER/Employee Dataset.py', '--cfg-path', '/tmp/tmp9w20h0ru']
[2023-12-20T17:34:26.305+0000] {standard_task_runner.py:85} INFO - Job 3: Subtask create_copy_of_postgres_table
[2023-12-20T17:34:26.333+0000] {task_command.py:416} INFO - Running <TaskInstance: employee_dataset-v01.create_copy_of_postgres_table scheduled__2023-12-01T00:00:00+00:00 [running]> on host b5c835cae1ba
[2023-12-20T17:34:26.375+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='dunnbc22' AIRFLOW_CTX_DAG_ID='employee_dataset-v01' AIRFLOW_CTX_TASK_ID='create_copy_of_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-01T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-12-01T00:00:00+00:00'
[2023-12-20T17:34:26.376+0000] {sql.py:274} INFO - Executing: -- params: new_table_name, orig_table_name

-- Drop the copy of the table, if it already exists
DROP TABLE IF EXISTS employee_dataset-pipeline;

-- Create copy of table
CREATE TABLE employee_dataset-pipeline AS
SELECT * 
FROM ee_dataset;

-- Grant additional permissions on the table
GRANT SELECT, INSERT, UPDATE, DELETE ON employee_dataset-pipeline TO ***;
[2023-12-20T17:34:26.383+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-20T17:34:26.394+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-20T17:34:26.407+0000] {sql.py:418} INFO - Running statement: -- params: new_table_name, orig_table_name

-- Drop the copy of the table, if it already exists
DROP TABLE IF EXISTS employee_dataset-pipeline;

-- Create copy of table
CREATE TABLE employee_dataset-pipeline AS
SELECT * 
FROM ee_dataset;

-- Grant additional permissions on the table
GRANT SELECT, INSERT, UPDATE, DELETE ON employee_dataset-pipeline TO ***;, parameters: None
[2023-12-20T17:34:26.412+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "-"
LINE 4: DROP TABLE IF EXISTS employee_dataset-pipeline;
                                             ^

[2023-12-20T17:34:26.419+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=employee_dataset-v01, task_id=create_copy_of_postgres_table, execution_date=20231201T000000, start_date=20231220T173426, end_date=20231220T173426
[2023-12-20T17:34:26.424+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 3 for task create_copy_of_postgres_table (syntax error at or near "-"
LINE 4: DROP TABLE IF EXISTS employee_dataset-pipeline;
                                             ^
; 331)
[2023-12-20T17:34:26.436+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-20T17:34:26.454+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
